# pico-hex

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
diffusers/: README.md  concave-diffuser.stl  convex-diffuser.stl  flat-diffuser.stl  inner-shell-for-concave-diffuser.stl  outer-shell-for-convex-diffuser.stl
examples/: CMakeLists.txt  README.md
examples/cubic-cycle/: CMakeLists.txt  cubic-cycle.cpp
examples/italic-fill-row/: CMakeLists.txt  italic-fill-row.cpp  italic-fill-row.hpp
examples/italic-sine-rainbow/: CMakeLists.txt  italic-sine-rainbow.cpp
examples/polar-flame/: CMakeLists.txt
examples/polar-flame/blue/: CMakeLists.txt  blue.cpp
examples/polar-flame/flame/: CMakeLists.txt  flame.cpp
examples/polar-flame/green/: CMakeLists.txt  green.cpp
examples/polar-flame/red/: CMakeLists.txt  red.cpp
examples/polar-flame/rollup/: CMakeLists.txt  rollup-flame.cpp
examples/polar-mixing/: CMakeLists.txt  polar-mixing.cpp  polar-mixing.hpp
examples/ring-rainbow/: CMakeLists.txt  ring-rainbow.cpp
examples/ring-spin/: CMakeLists.txt  ring-spin.cpp
examples/rollup-all/: CMakeLists.txt  rollup-all.cpp  rollup-all.hpp
examples/rollup-eye/: CMakeLists.txt  eye-close.hpp  eye-open.hpp  eye-roll.hpp  eye-saccade.hpp  eye.hpp  rollup-eye.cpp  rollup-eye.hpp
src/: animation-cycle-rings.cpp  animation-spin-rings.cpp  animation.cpp  animation.hpp  helpful-neopixel.cpp  helpful-neopixel.hpp  hex-unit.cpp  hex-unit.hpp  pico-hex.cpp
src/animations/: animation-cubic-cycle.cpp  animation-cubic-cycle.hpp  animation-italic-fill-row.cpp  animation-italic-fill-row.hpp  animation-italic-scrolling.cpp  animation-italic-scrolling.hpp  animation-italic-sine-rainbow.cpp  animation-italic-sine-rainbow.hpp  animation-polar-eye-close.cpp  animation-polar-eye-close.hpp  animation-polar-eye-open.cpp  animation-polar-eye-open.hpp  animation-polar-eye-roll.cpp  animation-polar-eye-roll.hpp  animation-polar-eye-saccade.cpp  animation-polar-eye-saccade.hpp  animation-polar-flame.cpp  animation-polar-flame.hpp  animation-polar-mixing.cpp  animation-polar-mixing.hpp  animation-ring-cycle.cpp  animation-ring-cycle.hpp  animation-ring-rainbow.cpp  animation-ring-rainbow.hpp  animation-ring-spin.cpp  animation-ring-spin.hpp  animation-rollup-all.cpp  animation-rollup-all.hpp  animation-rollup-eye.cpp  animation-rollup-eye.hpp  animation-rollup-mixing.cpp  animation-rollup-mixing.hpp  animation-sawtooth-scrolling.cpp  animation-sawtooth-scrolling.hpp  animation.cpp  animation.hpp  letters.h
